--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 
             <h2 class="h1 hero-title">Where every flavor tells a story!</h2>
 
-            <p class="hero-text">Food is any substance consumed to provide nutritional support for an organism.</p>
+            <p class="hero-text">We give best food services in Embu, Kenya.</p>
 
-            <button class="btn">Book A Table</button>
+            <button class="btn">Book an Order!</button>
 
           </div>
 
@@ -197,7 +197,7 @@
                 <h3 class="h3 card-title">Maxican Pizza</h3>
 
                 <p class="card-text">
-                  Food is any substance consumed to provide nutritional support for an organism.
+                  It consists of two tortillas with a filling of seasoned beef and refried beans, topped with tomato sauce, three cheeses, and diced tomatoes.
                 </p>
 
                 <img src="./assets/images/promo-1.png" width="300" height="300" loading="lazy" alt="Maxican Pizza"
@@ -227,7 +227,7 @@
                 <h3 class="h3 card-title">Soft Drinks</h3>
 
                 <p class="card-text">
-                  Food is any substance consumed to provide nutritional support for an organism.
+                  This includes soda, pop, cola, tonic, fruit punch, lemonade (and other “ades”), sweetened powdered drinks, as well as sports and energy drinks..
                 </p>
 
                 <img src="./assets/images/promo-2.png" width="300" height="300" loading="lazy" alt="Soft Drinks"
@@ -257,7 +257,7 @@
                 <h3 class="h3 card-title">French Fry</h3>
 
                 <p class="card-text">
-                  Food is any substance consumed to provide nutritional support for an organism.
+                  Apart from potatoes, you need at least one core ingredient: oil. French fries are made by frying the potatoes in oil, more specifically, by frying them in oil twice..
                 </p>
 
                 <img src="./assets/images/promo-3.png" width="300" height="300" loading="lazy" alt="French Fry"
@@ -288,7 +288,7 @@
                 <h3 class="h3 card-title">Burger Kingo</h3>
 
                 <p class="card-text">
-                  Food is any substance consumed to provide nutritional support for an organism.
+                  Try the best of the best delicacies.
                 </p>
 
                 <img src="./assets/images/promo-4.png" width="300" height="300" loading="lazy" alt="Burger Kingo"
@@ -319,7 +319,7 @@
                 <h3 class="h3 card-title">Chicken Masala</h3>
 
                 <p class="card-text">
-                  Food is any substance consumed to provide nutritional support for an organism.
+                  Chicken tikka masala is a dish consisting of roasted marinated chicken chunks in a spiced sauce. The sauce is usually creamy and orange-coloured.
                 </p>
 
                 <img src="./assets/images/promo-5.png" width="300" height="300" loading="lazy" alt="Chicken Masala"
@@ -360,9 +360,7 @@
             </h2>
 
             <p class="section-text">
-              The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during
-              the Jurchen
-              invasion of the 1120s, while it is also known that many restaurants were run by families.
+              In Bellon Bite's foodies is where every flavor tells a story.
             </p>
 
             <ul class="about-list">
@@ -430,7 +428,7 @@
           </h2>
 
           <p class="section-text">
-            Food is any substance consumed to provide nutritional support for an organism.
+            Try our foods today! Don't just eat, tell a story with bellon bites.
           </p>
 
           <ul class="fiter-list">
@@ -489,9 +487,9 @@
 
                   <p class="price-text">Price:</p>
 
-                  <data class="price">$49.00</data>
+                  <data class="price">ksh 500.00</data>
 
-                  <del class="del" value="69.00">$69.00</del>
+                  <del class="del" value="709.00">ksh 709.00</del>
 
                 </div>
 
@@ -713,7 +711,7 @@
           <div class="cta-content">
 
             <h2 class="h2 section-title">
-              The Foodie Have Excellent Of
+              The Bellon's Have Excellent Of
               <span class="span">Quality Burgers!</span>
             </h2>
 
